--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,3 +81,9 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.indicator-selector {
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
