try indicator-select css again but matching names

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,7 +82,7 @@ a:hover {
   text-decoration: underline;
 }
 
-.indicator-selector {
+.indicator-select {
   max-width: 100%;
   width: 100%;
   box-sizing: border-box;
