--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,12 @@ a:hover {
   text-decoration: underline;
 }
 
+#indicator-select {
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 .indicator-select {
   max-width: 100%;
   width: 100%;
